--- a/service.html
+++ b/service.html
@@ -281,21 +281,21 @@
                     <div class="contact-info">
                         <div class="contact-item">
                             <span class="contact-icon">📧</span>
-                            <span class="contact-text">hello@nexusagency.com</span>
+                            <span class="contact-text">euginengare@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">📞</span>
-                            <span class="contact-text">+1 (555) 123-4567</span>
+                            <span class="contact-text">+254 719410983</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-icon">📍</span>
-                            <span class="contact-text">San Francisco, CA</span>
+                            <span class="contact-text">NYERI, KENYA</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Nexus Agency. All rights reserved.</p>
+                <p>&copy; 2025 Nexus Agency. All rights reserved.</p>
             </div>
         </div>
     </footer>
